curl error payload to JSON

--- a/web/static_assets/createImage.html
+++ b/web/static_assets/createImage.html
@@ -9,17 +9,17 @@
 <body class="background">
 <header class="header" id="header"></header>
 <div class="card">
-    <h2>Create Image</h2>
+    <h2>Image</h2>
     <form class="card-content" id="create-image-form">
         <p class="hidden error" id="error-message"> </p>
         <p class="form-field">
-            <label>Upload Image</label>
-            <input type="text" required class="validated-field" id="upload image " placeholder="smooth-jamz"
+            <label>Image</label>
+            <input type="text" required class="validated-field" id="upload image " placeholder="url"
                    autofocus>
         </p>
         <p class="form-field">
-            <label>Tags</label>
-            <input type="text" id="tags" class="tags" placeholder="tag1,tag2"
+            <label>Caption</label>
+            <input type="text" id="caption" class="caption" placeholder="caption"
                    data-tip="Must be a comma separated list of tags">
         </p>
         <p>
